--- a/blog-platform/src/main/resources/templates/index.html
+++ b/blog-platform/src/main/resources/templates/index.html
@@ -15,18 +15,18 @@
             <li class="nav-item">
                 <a class="nav-link" th:href="@{/}">Home</a>
             </li>
-            <li class="nav-item" th:if="${#authorization.expression('isAuthenticated()')}">
-                <a class="nav-link" th:href="@{/post/new}">New Post</a>
-            </li>
-            <li class="nav-item" th:if="${#authorization.expression('isAuthenticated()')}">
-                <a class="nav-link" th:href="@{/logout}">Logout</a>
-            </li>
-            <li class="nav-item" th:if="${#authorization.expression('!isAuthenticated()')}">
-                <a class="nav-link" th:href="@{/login}">Login</a>
-            </li>
-            <li class="nav-item" th:if="${#authorization.expression('!isAuthenticated()')}">
-                <a class="nav-link" th:href="@{/register}">Register</a>
-            </li>
+<!--            <li class="nav-item" th:if="${#authorization.expression('isAuthenticated()')}">-->
+<!--                <a class="nav-link" th:href="@{/post/new}">New Post</a>-->
+<!--            </li>-->
+<!--            <li class="nav-item" th:if="${#authorization.expression('isAuthenticated()')}">-->
+<!--                <a class="nav-link" th:href="@{/logout}">Logout</a>-->
+<!--            </li>-->
+<!--            <li class="nav-item" th:if="${#authorization.expression('!isAuthenticated()')}">-->
+<!--                <a class="nav-link" th:href="@{/login}">Login</a>-->
+<!--            </li>-->
+<!--            <li class="nav-item" th:if="${#authorization.expression('!isAuthenticated()')}">-->
+<!--                <a class="nav-link" th:href="@{/register}">Register</a>-->
+<!--            </li>-->
         </ul>
     </div>
 </nav>
