--- a/blog-platform/src/main/resources/templates/register.html
+++ b/blog-platform/src/main/resources/templates/register.html
@@ -15,10 +15,16 @@
             <li class="nav-item">
                 <a class="nav-link" th:href="@{/}">Home</a>
             </li>
-            <li class="nav-item" th:if="${#authorization.expression('!isAuthenticated()')}">
+<!--            <li class="nav-item" th:if="${#authorization.expression('!isAuthenticated()')}">-->
+<!--                <a class="nav-link" th:href="@{/login}">Login</a>-->
+<!--            </li>-->
+<!--            <li class="nav-item" th:if="${#authorization.expression('!isAuthenticated()')}">-->
+<!--                <a class="nav-link" th:href="@{/register}" class="active">Register</a>-->
+<!--            </li>-->
+            <li class="nav-item">
                 <a class="nav-link" th:href="@{/login}">Login</a>
             </li>
-            <li class="nav-item" th:if="${#authorization.expression('!isAuthenticated()')}">
+            <li class="nav-item">
                 <a class="nav-link" th:href="@{/register}" class="active">Register</a>
             </li>
         </ul>
