updated register link

--- a/blog-platform/src/main/resources/templates/register.html
+++ b/blog-platform/src/main/resources/templates/register.html
@@ -25,7 +25,7 @@
                 <a class="nav-link" th:href="@{/login}">Login</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" th:href="@{/register}" class="active">Register</a>
+<!--                <a class="nav-link" th:href="@{/register}" class="active">Register</a>-->
             </li>
         </ul>
     </div>
