--- a/blog-platform/src/main/resources/templates/register.html
+++ b/blog-platform/src/main/resources/templates/register.html
@@ -100,10 +100,10 @@
                     </div>
 
                     <!-- Error Message -->
-                    <div id="error-message" class="alert alert-danger text-center mt-3" style="display:none;">
+                    <!--<div id="error-message" class="alert alert-danger text-center mt-3" style="display:none;">
                         An error has occurred. Bad credentials?
                     </div>
-
+                    -->
                     <!-- Submit Button -->
                     <div class="d-flex justify-content-center">
                         <button class="btn btn-custom btn-lg px-5" type="submit">
