Added static email prompt for user registration. It shows up in the data base, need to add functionality to the program that checks and makes sure that the password and confirm password are the same AND that the program checks the data base and makes sure that the username, email, and passowrd are not taken yet.

--- a/blog-platform/src/main/resources/templates/register.html
+++ b/blog-platform/src/main/resources/templates/register.html
@@ -66,6 +66,16 @@
                 <h2 class="fw-bold mb-4 text-uppercase text-center">Register</h2>
                 <p class="text-center">Join our community by filling out the form below!</p>
                 <form th:action="@{/register}" method="post">
+                    <!-- Email -->
+                    <div class="form-group mb-4">
+                        <input
+                                type="email"
+                                id="email"
+                                name="email"
+                                class="form-control form-control-lg"
+                                required />
+                        <label for="email" class="form-label d-block text-center">Email</label>
+                    </div>
                     <!-- Username -->
                     <div class="form-group mb-4">
                         <input
